# pwninit.py

./: .gitignore  404.html  CNAME  README.md  dev_env.sh  index.html  install.sh  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: deploy.yml  publish.yml  release.yml  tests.yml
0.1/: 404.html  index.html  objects.inv  search.json  sitemap.xml
0.1/cli/intro/: index.html
0.1/cli/plugins/: index.html
0.1/pwninit/: index.html
0.1/pwninit/config/: index.html
0.1/pwninit/ctx/: index.html
0.1/pwninit/io/: index.html
0.1/pwninit/plugins/: index.html
0.1/pwninit/pwncontext/: index.html
0.1/pwninit/utils/: index.html
cli/intro/: index.html
cli/plugins/: index.html
doc/: pwninit_project.excalidraw
docs/: CNAME  index.md
docs/cli/: intro.md  plugins.md
docs/img/: pwninit.excalidraw
docs/pwninit/: config.md  ctx.md  index.md  io.md  plugins.md  pwncontext.md  utils.md
docs/pwninit/helpers/: pwncontext.md
pwninit/: index.html
pwninit/io/: index.html
pwninit/plugins/: index.html
pwninit/pwncontext/: index.html
pwninit/utils/: index.html
search/: search_index.json
src/: main.py
src/providers/: rootme.py
src/pwninit/: __init__.py  config.py  context.py  farm.py  helpers.py  io.py  kernel.py  pwncontext.py  pwninit.py  run.py  utils.py
src/pwninit/helpers/: __init__.py  constants.py  fsop.py  helpers.py  muney.py  pow.py  powsolver.py  pwncontext.py  utils.py
src/pwninit/plugins/: __init__.py  docker.py  pwncollege.py  rootme.py
src/pwninit/providers/: docker.py  pwncollege.py  root-me.py
src/pwninit/scripts/: __init__.py  menu.py
src/pwninit/templates/: Makefile  exploit.c  exploit.h  exploit.py  notes.md
src/pwninit/utils/: menu.py
src/pwninit_py_0xb0tm4n/: cli.py  main.py
src/pwninit_py_0xb0tm4n/providers/: root-me.py
src/pwninit_py_0xb0tm4n/utils/: menu.py
src/utils/: menu.py
test/: copy.py  files.txt  init.sh
test/bof/: exploit.py  notes.md
tests/: conftest.py  test_context.py  test_io.py  test_pwncontext.py  test_pwninit.py
tests/resources/: Dockerfile  chall  chall.c  ld-linux-x86-64.so.2  run
tests/ressources/: chall
