[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwninit.py"
version = "0.1.3"
authors = [
  { name="0xb0tm4n", email="0xb0tm4n@proton.me" },
]
description = "A comprehensive Python toolkit for CTF exploit development."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "pwntools",
  "docker",
  "mako",
  "python-magic",
  "lz4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0"
]

[project.scripts]
pwninit = "pwninit.pwninit:cli"
run = "pwninit.run:cli"

[project.urls]
Homepage = "https://github.com/Super-Botman/pwninit.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pwninit = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pwnlib"
]
timeout = 60
